[gd_scene load_steps=7 format=3 uid="uid://c511ccoqibuv"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_06lhu"]
[ext_resource type="Texture2D" uid="uid://bksr5vegtg0bo" path="res://assets/54510-1920_1080.jpg" id="1_ky34b"]

[sub_resource type="SystemFont" id="SystemFont_snjjf"]
font_names = PackedStringArray("Impact")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_neon_hover"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_neon_pressed"]
bg_color = Color(0, 0.5, 0.5, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_neon"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06lhu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ky34b")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.5, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0.25, 0.25, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("SystemFont_snjjf")
theme_override_font_sizes/font_size = 64
text = "Breakout Neon"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.5, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.5, 0.5, 1)
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_snjjf")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_neon_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_neon_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_neon")
text = "PLAY"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.5, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.5, 0.5, 1)
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_snjjf")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_neon_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_neon_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_neon")
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.5, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.5, 0.5, 1)
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_snjjf")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_neon_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_neon_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_neon")
text = "EXIT"
